data/derived/sp14/progs/unify/prog3588.ml.out
Characters 175-176:
  | _ -> 0
         ^
Error: This expression has type int but an expression was expected of type
         int list
